# mcp-vertexai-search

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  config.yml.template  pyproject.toml  requirements.setup.txt
.github/: dependabot.yml
.github/workflows/: test.yml  trunk_check.yml  trunk_upgrade.yml
.trunk/: trunk.yaml
dev/: build.sh  publish.sh  setup.sh
src/mcp_vertexai_search/: __main__.py  agent.py  cli.py  config.py  google_cloud.py  server.py  utils.py
src/research_agent/: chat.py  mcp_client.py  utils.py  voice_chat.py
tests/: test_config.py  test_utils.py
