[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_vertexai_search"]

[project]
name = "mcp-vertexai-search"
version = "0.1.0"
authors = [{ name = "ubie" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
description = "A dbt artifacts parser in python"
dependencies = [
  "click>=8.1.8",
  "google-cloud-aiplatform>=1.80.0",
  "google-cloud-discoveryengine>=0.13.6",
  "loguru>=0.7.3",
  "mcp>=1.2.1",
  "pydantic>=2.10.6",
  "uvicorn>=0.34.0",
  "vertexai>=1.43.0",
]

[project.optional-dependencies]
dev = [
  "autopep8>=2.3.2",
  "bandit>=1.8.3",
  "black>=25.1.0",
  "isort>=6.0.0",
  "pytest>=8.3.4",
  "ruff>=0.9.6",
]


[project.scripts]
mcp-vertexai-search = "mcp_vertexai_search.cli:cli"
